# Black-hole-simulation

./: CMakeLists.txt  README.md  blackhole.cpp
